# automation-platform

./: b  docker-compose.yml  postgresql.conf  prometheus.yml  readme.md  readme.txt
.github/workflows/: ci.yml
api-gateway/: package-lock.json  package.json  tsconfig.json
api-gateway/src/: server.ts
api-gateway/src/config/: authMiddleware.ts  requireRol.ts  swagger.ts  verifyToken.ts
api-gateway/src/test/: routes.test.ts
auth-service/: Dockerfile  package-lock.json  package.json
auth-service/src/: server.ts
auth-service/src/config/: generateToken.ts  logger.ts  rateLimit.ts  swagger.ts
auth-service/src/db/: ms.ts
backups/: dump-2026-04-19.sql
execution-service/: Dockerfile  pyproject.toml
execution-service/src/: server.py
execution-service/src/config/: logger.py  retry_strategy.py
execution-service/src/handlers/: event_handler.py
execution-service/src/models/: event.py  execution.py
execution-service/src/routers/: executions.py
execution-service/tests/: test_app.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
init-db/: 00-init.sql  01-ms_schema.sql  02-rule_schema.sql  03-auth_schema.sql  04-user_schema.sql  auth_schema.sql  init.sql  ms_schema.sql  rule_schema.sql  schema-dump.sql  user_schema.sql
notification-service/: Dockerfile  pyproject.toml
notification-service/src/: server.py
notification-service/src/routers/: actions.py
notification-service/tests/: test_app.py
realtime-gateway/: package-lock.json  package.json  tsconfig.json
realtime-gateway/src/: app.ts  server.ts
rule-service/: Dockerfile  pyproject.toml
rule-service/db/: ms.py
rule-service/src/: server.py
rule-service/src/models/: rule.py
rule-service/src/routers/: rules.py
rule-service/tests/: test_app.py
user-service/: Dockerfile  pyproject.toml
user-service/db/: db.py
user-service/src/: server.py
user-service/src/models/: user.py
user-service/src/routers/: alerts.py  users.py
user-service/tests/: test_app.py
webhook-service/: package-lock.json  package.json
webhook-service/src/: server.ts
(+49 files in other folders)
