[tool.poetry]
name = "execution-service"
version = "0.1.0"
description = ""
authors = ["Gerardo <gerardoabc16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.130.0"
uvicorn = "^0.41.0"
pydantic = "^2.12.5"
redis = "^7.2.0"
httpx = "^0.28.1"
psycopg = "^3.3.3"
psycopg-binary = "^3.3.3"
simpleeval = "^1.0.7"
loguru = "^0.7.3"
psutil = "^7.2.2"
idna = "3.15"
flake8 = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
