[tool.poetry]
name = "rule-service"
version = "0.1.0"
description = ""
authors = ["Gerardo <gerardoabc16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.130.0"
uvicorn = "^0.41.0"
pydantic = "^2.12.5"
redis = "^7.2.0"
psycopg = {extras = ["binary"], version = "^3.3.3"}
httpx = "^0.28.1"
psutil = "^7.2.2"
idna = "3.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
