[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Gerardo <gerardoabc16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.134.0"
uvicorn = "^0.41.0"
pydantic = "^2.12.5"
redis = "^7.2.1"
psycopg = {extras = ["binary"], version = "^3.3.3"}
httpx = "^0.28.1"
bcrypt = "^5.0.0"
psutil = "^7.2.2"
idna = "3.15"
flake8 = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
